fixed logic in CompilerConfigurationFactory.checkUnique